--- a/Massi/Q2.html/FULLSTACK/Event/EventQ2.html
+++ b/Massi/Q2.html/FULLSTACK/Event/EventQ2.html
@@ -3,61 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Validation</title>
+    <title>Form Validation with Events</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-        .form-container {
-            max-width: 400px;
-            margin: auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-        .error {
+        .error-message {
             color: red;
             font-size: 12px;
-            margin-top: 5px;
+            display: none;
+        }
+        .input-field {
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
-    <div class="form-container">
-        <form id="myForm">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name">
-                <div id="nameError" class="error"></div>
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
-                <div id="emailError" class="error"></div>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password">
-                <div id="passwordError" class="error"></div>
-            </div>
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-
+    <h1>Form Validation</h1>
+    <form id="registration-form">
+        <div class="input-field">
+            <label for="name">Name:</label>
+            <input type="text" id="name" placeholder="Enter your name" required>
+            <div id="name-error" class="error-message">Name is required.</div>
+        </div>
+        <div class="input-field">
+            <label for="email">Email:</label>
+            <input type="email" id="email" placeholder="Enter your email" required>
+            <div id="email-error" class="error-message">Please enter a valid email.</div>
+        </div>
+        <div class="input-field">
+            <label for="password">Password:</label>
+            <input type="password" id="password" placeholder="Enter your password" required>
+            <div id="password-error" class="error-message">Password must be at least 8 characters long.</div>
+        </div>
+        <button type="submit">Submit</button>
+    </form>
     <script>
         // Get form elements
         const nameInput = document.getElementById('name');
